# Epoxy-Inverse-Design

./: .gitignore  1_Dataset.md  2_Regression.md  3_Optimization.py  4_Comparison.md  README.md  make_bounds_template.py  paths.py  pyproject.toml
helpers/: constants.py
